# FileGuard-File-Integrity-Monitor

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  baseline.json  hasher.py  main.py  monitor.py  pyproject.toml  report.py  requirements.txt
docs/: EVIDENCE.md  FUTURE_IMPROVEMENTS.md  INTEGRITY_LOGIC.md  PORTFOLIO_SUMMARY.md  SECURITY_REVIEW.md  THREAT_MODEL.md
monitored_files/: app_settings.txt  sample_config.txt  user_data.txt
reports/: integrity_report.json  integrity_report.txt
